Add a estrutura da logica de chaves e comecei a descriptografrar baseado na ascii
