# swagger_output.json
@@ -166,6 +166,66 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string"
+                  },
+                  "senha": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "email",
+                  "senha"
+                ]
+              },
+              "example": {
+                "email": "danielaugustosant@hotmail.com",
+                "senha": "12345"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/decrypt": {
+      "post": {
+        "tags": [
+          "Key"
+        ],
+        "summary": "Descriptografar",
+        "description": "Este endpoint recebe um arquivo criptografado e uma string com a primeira palavra descriptografada do arquivo: \\n Se a string estiver vazia, o sistema deve tentar descriptografar o arquivo usando a chave atual. A nova chave resultante deve ser registrada no banco de dados e substituir a chave anterior como a chave atual.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/current-key": {
+      "get": {
+        "tags": [
+          "Key"
+        ],
+        "summary": "Obter chave atual",
+        "description": "Retorna a chave atual do sistema.",
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
